// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Footer Harmonised Group 1 renders correctly 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group1"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="/example"
      >
        Site name
      </a>
      <div
        class="ecl-footer-harmonised__description"
      >
        This site is managed by the Directorate-General for "DG identification"
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section2"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Contact us
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact information of the DG
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section3"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        About us
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Information about the DG
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section4"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Follow us on
      </div>
      <ul
        class="ecl-footer-harmonised__list ecl-footer-harmonised__list--inline"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--facebook"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Facebook
            </span>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--twitter"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Twitter
            </span>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--linkedin"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Linkedin
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section5"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Related sites
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 1
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 2
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 3
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 4
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 5
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section6"
    >
      <div
        class="ecl-footer-harmonised__content"
      >
        More information on:
      </div>
      <ul
        class="ecl-footer-harmonised__list ecl-footer-harmonised__list--condensed"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Class name 1
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Class name 2
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section7"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="https://ec.europa.eu/info/index_en"
      >
        European Commission
      </a>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section8"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-harmonised__link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section9"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;

exports[`EC - Footer Harmonised Group 1 renders correctly with extra attributes 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group1"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="/example"
      >
        Site name
      </a>
      <div
        class="ecl-footer-harmonised__description"
      >
        This site is managed by the Directorate-General for "DG identification"
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section2"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Contact us
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact information of the DG
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section3"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        About us
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Information about the DG
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section4"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Follow us on
      </div>
      <ul
        class="ecl-footer-harmonised__list ecl-footer-harmonised__list--inline"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--facebook"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Facebook
            </span>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--twitter"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Twitter
            </span>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--linkedin"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Linkedin
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section5"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Related sites
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 1
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 2
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 3
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 4
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 5
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section6"
    >
      <div
        class="ecl-footer-harmonised__content"
      >
        More information on:
      </div>
      <ul
        class="ecl-footer-harmonised__list ecl-footer-harmonised__list--condensed"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Class name 1
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Class name 2
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section7"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="https://ec.europa.eu/info/index_en"
      >
        European Commission
      </a>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section8"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-harmonised__link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section9"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;

exports[`EC - Footer Harmonised Group 1 renders correctly with extra class names 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group1 custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="/example"
      >
        Site name
      </a>
      <div
        class="ecl-footer-harmonised__description"
      >
        This site is managed by the Directorate-General for "DG identification"
      </div>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section2"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Contact us
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact information of the DG
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section3"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        About us
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Information about the DG
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section4"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Follow us on
      </div>
      <ul
        class="ecl-footer-harmonised__list ecl-footer-harmonised__list--inline"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--facebook"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Facebook
            </span>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--twitter"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Twitter
            </span>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-harmonised__link"
            href="/example"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#branded--linkedin"
              />
            </svg>
             
            <span
              class="ecl-link__label"
            >
              Linkedin
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section5"
    >
      <div
        class="ecl-footer-harmonised__title ecl-footer-harmonised__title--separator"
      >
        Related sites
      </div>
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 1
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 2
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 3
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 4
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Related link 5
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section6"
    >
      <div
        class="ecl-footer-harmonised__content"
      >
        More information on:
      </div>
      <ul
        class="ecl-footer-harmonised__list ecl-footer-harmonised__list--condensed"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Class name 1
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Class name 2
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section7"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="https://ec.europa.eu/info/index_en"
      >
        European Commission
      </a>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section8"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-harmonised__link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section9"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;

exports[`EC - Footer Harmonised Group 2 renders correctly 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group2"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="https://ec.europa.eu/info/index_en"
      >
        European Commission
      </a>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section2"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-harmonised__link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section3"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;

exports[`EC - Footer Harmonised Group 2 renders correctly with extra attributes 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group2"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="https://ec.europa.eu/info/index_en"
      >
        European Commission
      </a>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section2"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-harmonised__link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section3"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;

exports[`EC - Footer Harmonised Group 2 renders correctly with extra class names 1`] = `
<footer
  class="ecl-footer-harmonised ecl-footer-harmonised--group2 custom-class custom-class--test"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  >
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section1"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-footer-harmonised__title"
        href="https://ec.europa.eu/info/index_en"
      >
        European Commission
      </a>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section2"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Contact the European Commission
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-harmonised__link"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Follow the European Commission on social media
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--external"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Resources for partners
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-footer-harmonised__section ecl-footer-harmonised__section3"
    >
      <ul
        class="ecl-footer-harmonised__list"
      >
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Language policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Cookies
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Privacy policy
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Legal notice
          </a>
        </li>
        <li
          class="ecl-footer-harmonised__list-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-footer-harmonised__link"
            href="/example"
          >
            Brexit content disclaimer
          </a>
        </li>
      </ul>
    </div>
  </div>
</footer>
`;
